--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             }
         },
         //todo lägg ut visningsläget på höger sida i egen component(och varje innehåll i egen? Eller här/varje article i egen?).
+        // Döp om section och component till mer generiskt.
         template: `
           <section id="add-recipe">
           <button v-show="!showForm" @click="displayForm">Add a recipe</button>
