--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
   <main>
     <week-table :recipes="recipes" :weekdays="weekdays"></week-table>
     <add-recipe :recipes="recipes" :weekdays="weekdays" @save-recipe="saveRecipe"></add-recipe>
-    <recipe-list :recipes="recipes"></recipe-list>
-    <shopping-list :recipes="recipes"></shopping-list>
   </main>
 </section>
 <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
@@ -85,7 +83,11 @@
         // Döp om section och component till mer generiskt.
         template: `
           <section id="add-recipe">
-          <button v-show="!showForm" @click="displayForm">Add a recipe</button>
+          <article id="optionButtons">
+            <button v-show="!showForm" @click="displayForm">Add a recipe</button>
+            <button v-show="showRecipeBtn" @click="displayRecipes">Show all recipes</button>
+            <button v-show="showShoppingListBtn" @click="displayShoppingList">Show this week's shopping list</button>
+          </article>
           <p v-show="showRecipeSavedMsg">Recipe saved!</p>
           <form v-show="showForm"
                 @submit.prevent="addRecipe">
@@ -115,7 +117,8 @@
             <p v-if="showIngredientError">Ingredient name required!</p>
             <p>
               <button @click.prevent="addIngredient"
-                      :class="{dualOptions: ingredientQty && ingredientWeight}">Add ingredient</button>
+                      :class="{dualOptions: ingredientQty && ingredientWeight}">Add ingredient
+              </button>
             </p>
             <p><label for="weekday">Choose a weekday, or leave blank to save the recipe for later:</label></p>
             <p><select id="weekday"
@@ -135,23 +138,25 @@
           </form>
           <div id="placeholder"></div>
           <section id="display">
-          <article v-show="showForm" id="reactive-recipe">
-            <h2 v-show="title.length || ingredients.length">Your recipe:</h2>
-            <h3>{{ title }}</h3>
-            <ul>
-              <li v-for="(ingredient, index) in ingredients"
-                  :key="index">
-                {{ ingredient.ingredientName }} : {{ ingredient.ingredientQty }}{{ ingredient.ingredientWeight }}
-                <input type="image"
-                       src="img/icon/outline_delete_black_24dp.png"
-                       alt="delete"
-                       class="delete"
-                       title="remove ingredient"
-                       @click="removeIngredient(index)">
-              </li>
-            </ul>
-          </article>
-          <todays-recipe :recipes="recipes"></todays-recipe>
+            <article v-show="showForm" id="reactive-recipe">
+              <h2 v-show="title.length || ingredients.length">Your recipe:</h2>
+              <h3>{{ title }}</h3>
+              <ul>
+                <li v-for="(ingredient, index) in ingredients"
+                    :key="index">
+                  {{ ingredient.ingredientName }} : {{ ingredient.ingredientQty }}{{ ingredient.ingredientWeight }}
+                  <input type="image"
+                         src="img/icon/outline_delete_black_24dp.png"
+                         alt="delete"
+                         class="delete"
+                         title="remove ingredient"
+                         @click="removeIngredient(index)">
+                </li>
+              </ul>
+            </article>
+            <todays-recipe :recipes="recipes"></todays-recipe>
+            <recipe-list :recipes="recipes"></recipe-list>
+            <shopping-list :recipes="recipes"></shopping-list>
           </section>
           </section>
         `,
@@ -160,6 +165,8 @@
                 showForm: false,
                 showRecipeSavedMsg: false,
                 showIngredientError: false,
+                showRecipeBtn: true,
+                showShoppingListBtn: true,
                 title: '',
                 ingredientName: '',
                 ingredientQty: '',
@@ -190,8 +197,8 @@
                     this.showIngredientError = true
                 }
             },
-            removeIngredient(index){
-              this.ingredients.splice(index, 1)
+            removeIngredient(index) {
+                this.ingredients.splice(index, 1)
             },
             //todo Gör så man kan välja vecka.
             addRecipe() {
@@ -245,6 +252,14 @@
                 this.ingredientName = ''
                 this.ingredientWeight = ''
                 this.showIngredientError = false
+            },
+            displayRecipes() {
+                eventBus.$emit('show-recipes')
+                this.showRecipeBtn = false
+            },
+            displayShoppingList() {
+                eventBus.$emit('show-shoppinglist')
+                this.showShoppingListBtn = false
             }
         },
         mounted() {
@@ -252,6 +267,8 @@
                 this.showForm = false
                 this.showRecipeSavedMsg = false
                 this.showTodaysRecipe = false
+                this.showRecipeBtn = true
+                this.showShoppingListBtn = true
             })
         }
     })
@@ -300,38 +317,35 @@
             }
         },
         template: `
-          <section id="recipe-list">
-          <button v-show="!showRecipes" @click="displayRecipes">Show all recipes</button>
-          <article id="recipes" v-show="showRecipes">
-            <button @click="hideRecipes">Hide recipes</button>
-            <ul>
-              <li id="recipes-loop"
-                  v-for="recipe in recipes"
-                  :key recipe.title
-                  @click="selectedTitle = recipe.title"
-                  :class="{'active-title': selectedTitle === recipe.title}">
-                <div id="recipe-header">
-                  <h3>{{ recipe.title }}</h3>
-                  <input type="image"
-                         src="img/icon/outline_delete_black_24dp.png"
-                         alt="delete"
-                         class="delete"
-                         title="delete recipe"
-                         v-show="selectedTitle === recipe.title"
-                         @click="deleteRecipe">
-                </div>
-                <div v-show="selectedTitle === recipe.title">
-                  <ul>
-                    <li
-                        v-for="(ingredient, index) in recipe.ingredients"
-                        :key="index">
-                      {{ ingredient.ingredientName }} : {{ ingredient.ingredientQty }}{{ ingredient.ingredientWeight }}
-                    </li>
-                  </ul>
-                </div>
-              </li>
-            </ul>
-          </article>
+          <section id="recipe-list" v-show="showRecipes">
+          <button @click="hideRecipes">Hide recipes</button>
+          <ul>
+            <li id="recipes-loop"
+                v-for="recipe in recipes"
+                :key recipe.title
+                @click="selectedTitle = recipe.title"
+                :class="{'active-title': selectedTitle === recipe.title}">
+              <div id="recipe-header">
+                <h3>{{ recipe.title }}</h3>
+                <input type="image"
+                       src="img/icon/outline_delete_black_24dp.png"
+                       alt="delete"
+                       class="delete"
+                       title="delete recipe"
+                       v-show="selectedTitle === recipe.title"
+                       @click="deleteRecipe">
+              </div>
+              <div v-show="selectedTitle === recipe.title">
+                <ul>
+                  <li
+                      v-for="(ingredient, index) in recipe.ingredients"
+                      :key="index">
+                    {{ ingredient.ingredientName }} : {{ ingredient.ingredientQty }}{{ ingredient.ingredientWeight }}
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
           </section>
         `,
         data() {
@@ -341,13 +355,10 @@
             }
         },
         methods: {
-            displayRecipes() {
-                eventBus.$emit('hide-others')
-                this.showRecipes = true
-            },
             hideRecipes() {
                 this.showRecipes = false
                 this.selectedTitle = ''
+                eventBus.$emit('hide-others')
             },
             deleteRecipe() {
                 if (confirm('Are you sure you want to delete recipe: ' + this.selectedTitle + '?')) {
@@ -358,6 +369,8 @@
         },
         mounted() {
             eventBus.$on('hide-others', () => this.showRecipes = false)
+            eventBus.$on('show-recipes', () => this.showRecipes = true
+            )
         }
     })
 
@@ -369,8 +382,6 @@
             }
         },
         template: `
-          <section>
-          <button v-show="!showShoppingList" @click="displayShoppingList">Show this week's shopping list</button>
           <article id="shopping-list" v-show="showShoppingList">
             <button @click="hideShoppingList">Hide shopping list</button>
             <h2>This week's shopping list:</h2>
@@ -384,7 +395,6 @@
               </li>
             </ul>
           </article>
-          </section>
         `,
         data() {
             return {
@@ -392,16 +402,14 @@
             }
         },
         methods: {
-            displayShoppingList() {
-                eventBus.$emit('hide-others')
-                this.showShoppingList = true
-            },
             hideShoppingList() {
                 this.showShoppingList = false
+                eventBus.$emit('hide-others')
             }
         },
         mounted() {
             eventBus.$on('hide-others', () => this.showShoppingList = false)
+            eventBus.$on('show-shoppinglist', () => this.showShoppingList = true)
         }
     })
 
