Added possibility to assign weekday from recipe list

--- a/index.html
+++ b/index.html
@@ -69,173 +69,175 @@
     })
 
     Vue.component('user-interactivity', {
-        props: {
-            recipes: {
-                type: Array,
-                required: true
-            },
-            weekdays: {
-                type: Array,
-                required: true
-            }
-        },
-        template: `
-          <section id="user-interactivity">
-          <article id="optionButtons">
-            <button @click="displayForm">Add a recipe</button>
-            <button @click="displayRecipes">Show all recipes</button>
-            <button @click="displayShoppingList">Show this week's shopping list</button>
-          </article>
-          <p v-show="showRecipeSavedMsg">Recipe saved!</p>
-          <form v-show="showForm"
-                @submit.prevent="addRecipe">
-            <p>
-              <label for="title">Enter a recipe name:</label>
-            </p>
-            <p><input id="title"
-                      name="title"
-                      required
-                      v-model="title"/></p>
-            <p><label for="ingredients">Enter an ingredient:</label></p>
-            <p><input id="ingredients"
-                      name="ingredients"
-                      v-model="ingredientName"></p>
-            <p><label for="ingredient-qty">Select a quantity:</label></p>
-            <p><input type="number"
-                      id="ingredient-qty"
-                      name="ingredient-qty"
-                      min="1"
-                      max="50"
-                      v-model="ingredientQty"></p>
-            <p><label for="ingredient-weight">Or, enter weight, measurement, etc:</label></p>
-            <p><input id="ingredient-weight"
-                      name="ingredient-weight"
-                      v-model="ingredientWeight"></p>
-            <p v-if="ingredientQty && ingredientWeight">Please enter either quantity or free text!</p>
-            <p v-if="showIngredientError">Ingredient name required!</p>
-            <p>
-              <button @click.prevent="addIngredient"
-                      :class="{dualOptions: ingredientQty && ingredientWeight}">Add ingredient
-              </button>
-            </p>
-            <p><label for="weekday">Choose a weekday, or leave blank to save the recipe for later:</label></p>
-            <p><select id="weekday"
-                       name="weekday"
-                       v-model="weekday">
-              <option></option>
-              <option v-for="weekday in weekdays">{{ weekday }}</option>
-            </select></p>
-            <p>
-              <input type="submit"
-                     id="submit"
-                     name="submit"
-                     value="Save recipe"></p>
-            <p>
-              <button @click="clearForm" id="cancelForm">Cancel</button>
-            </p>
-          </form>
-          <div>
-          <article v-show="showForm" id="reactive-recipe">
-            <h2 v-show="title.length || ingredients.length">Your recipe:</h2>
-            <h3>{{ title }}</h3>
-            <ul>
-              <li v-for="(ingredient, index) in ingredients"
-                  :key="index">
-                {{ ingredient.ingredientName }} : {{ ingredient.ingredientQty }}{{ ingredient.ingredientWeight }}
-                <input type="image"
-                       src="img/icon/outline_delete_black_24dp.png"
-                       alt="delete"
-                       class="delete"
-                       title="remove ingredient"
-                       @click="removeIngredient(index)">
-              </li>
-            </ul>
-          </article>
-          </div>
-          <section id="display">
-            <todays-recipe :recipes="recipes"></todays-recipe>
-            <recipe-list :recipes="recipes"></recipe-list>
-            <shopping-list :recipes="recipes"></shopping-list>
-          </section>
-          </section>
-        `,
-        data() {
-            return {
-                showForm: false,
-                showRecipeSavedMsg: false,
-                showIngredientError: false,
-                showRecipeBtn: true,
-                showShoppingListBtn: true,
-                title: '',
-                ingredientName: '',
-                ingredientQty: '',
-                ingredientWeight: '',
-                ingredients: [],
-                weekday: '',
-                image: '',
-                alt: ''
-            }
-        },
-        methods: {
-            displayForm() {
-                eventBus.$emit('hide-others')
-                this.showForm = true
-                this.showRecipeSavedMsg = false
-            },
-            addIngredient() {
-                if (!(this.ingredientWeight && this.ingredientQty)
-                    && this.ingredientName) {
-                    let ingredient = {
-                        ingredientName: this.ingredientName,
-                        ingredientQty: this.ingredientQty,
-                        ingredientWeight: this.ingredientWeight
-                    }
-                    this.ingredients.push(ingredient)
-                    this.clearIngredients()
-                } else if (!this.ingredientName) {
-                    this.showIngredientError = true
+            props: {
+                recipes: {
+                    type: Array,
+                    required: true
+                },
+                weekdays: {
+                    type: Array,
+                    required: true
                 }
             },
-            removeIngredient(index) {
-                this.ingredients.splice(index, 1)
+            template: `
+              <section id="user-interactivity">
+              <article id="optionButtons">
+                <button @click="displayForm">Add a recipe</button>
+                <button @click="displayRecipes">Show all recipes</button>
+                <button @click="displayShoppingList">Show this week's shopping list</button>
+              </article>
+              <p v-show="showRecipeSavedMsg">Recipe saved!</p>
+              <form v-show="showForm"
+                    @submit.prevent="addRecipe">
+                <p>
+                  <label for="title">Enter a recipe name:</label>
+                </p>
+                <p><input id="title"
+                          name="title"
+                          required
+                          v-model="title"/></p>
+                <p><label for="ingredients">Enter an ingredient:</label></p>
+                <p><input id="ingredients"
+                          name="ingredients"
+                          v-model="ingredientName"></p>
+                <p><label for="ingredient-qty">Select a quantity:</label></p>
+                <p><input type="number"
+                          id="ingredient-qty"
+                          name="ingredient-qty"
+                          min="1"
+                          max="50"
+                          v-model="ingredientQty"></p>
+                <p><label for="ingredient-weight">Or, enter weight, measurement, etc:</label></p>
+                <p><input id="ingredient-weight"
+                          name="ingredient-weight"
+                          v-model="ingredientWeight"></p>
+                <p v-if="ingredientQty && ingredientWeight">Please enter either quantity or free text!</p>
+                <p v-if="showIngredientError">Ingredient name required!</p>
+                <p>
+                  <button @click.prevent="addIngredient"
+                          :class="{dualOptions: ingredientQty && ingredientWeight}">Add ingredient
+                  </button>
+                </p>
+                <p><label for="weekday">Choose a weekday, or leave blank to save the recipe for later:</label></p>
+                <p><select id="weekday"
+                           name="weekday"
+                           v-model="weekday">
+                  <option></option>
+                  <option v-for="weekday in weekdays">{{ weekday }}</option>
+                </select></p>
+                <p>
+                  <input type="submit"
+                         id="submit"
+                         name="submit"
+                         value="Save recipe"></p>
+                <p>
+                  <button @click="clearForm" id="cancelForm">Cancel</button>
+                </p>
+              </form>
+              <div>
+                <article v-show="showForm" id="reactive-recipe">
+                  <h2 v-show="title.length || ingredients.length">Your recipe:</h2>
+                  <h3>{{ title }}</h3>
+                  <ul>
+                    <li v-for="(ingredient, index) in ingredients"
+                        :key="index">
+                      {{ ingredient.ingredientName }} : {{ ingredient.ingredientQty }}{{ ingredient.ingredientWeight }}
+                      <input type="image"
+                             src="img/icon/outline_delete_black_24dp.png"
+                             alt="delete"
+                             class="delete"
+                             title="remove ingredient"
+                             @click="removeIngredient(index)">
+                    </li>
+                  </ul>
+                </article>
+              </div>
+              <section id="display">
+                <todays-recipe :recipes="recipes"></todays-recipe>
+                <recipe-list :recipes="recipes" :weekdays="weekdays" :remove-duplicates="removeDuplicates"></recipe-list>
+                <shopping-list :recipes="recipes"></shopping-list>
+              </section>
+              </section>
+            `,
+            data() {
+                return {
+                    showForm: false,
+                    showRecipeSavedMsg: false,
+                    showIngredientError: false,
+                    showRecipeBtn: true,
+                    showShoppingListBtn: true,
+                    title: '',
+                    ingredientName: '',
+                    ingredientQty: '',
+                    ingredientWeight: '',
+                    ingredients: [],
+                    weekday: '',
+                    image: '',
+                    alt: ''
+                }
             },
-            //todo Gör så man kan välja vecka.
-            addRecipe() {
-                let recipe = {
-                    title: this.title,
-                    ingredients: this.ingredients.slice(),
-                    weekday: this.weekday,
-                    image: `img/${this.weekday}.jpg`,
-                    alt: this.weekday,
-                    position: function () {
-                        switch (this.weekday) {
-                            case 'monday':
-                                return '2 / 1 / 3 / 2';
-                            case 'tuesday':
-                                return '2 / 2 / 3 / 3';
-                            case 'wednesday':
-                                return '2 / 3 / 3 / 4';
-                            case 'thursday':
-                                return '2 / 4 / 3 / 5';
-                            case 'friday':
-                                return '2 / 5 / 3 / 6';
-                            case 'saturday':
-                                return '2 / 6 / 3 / 7';
-                            case 'sunday':
-                                return '2 / 7 / 3 / 8';
+            methods: {
+                displayForm() {
+                    eventBus.$emit('hide-others')
+                    this.showForm = true
+                    this.showRecipeSavedMsg = false
+                },
+                addIngredient() {
+                    if (!(this.ingredientWeight && this.ingredientQty)
+                        && this.ingredientName) {
+                        let ingredient = {
+                            ingredientName: this.ingredientName,
+                            ingredientQty: this.ingredientQty,
+                            ingredientWeight: this.ingredientWeight
+                        }
+                        this.ingredients.push(ingredient)
+                        this.clearIngredients()
+                    } else if (!this.ingredientName) {
+                        this.showIngredientError = true
+                    }
+                },
+                removeIngredient(index) {
+                    this.ingredients.splice(index, 1)
+                },
+                //todo Gör så man kan välja vecka.
+                addRecipe() {
+                    let recipe = {
+                        title: this.title,
+                        ingredients: this.ingredients.slice(),
+                        weekday: this.weekday,
+                        image: `img/${this.weekday}.jpg`,
+                        alt: this.weekday,
+                        position: function () {
+                            switch (this.weekday) {
+                                case 'monday':
+                                    return '2 / 1 / 3 / 2';
+                                case 'tuesday':
+                                    return '2 / 2 / 3 / 3';
+                                case 'wednesday':
+                                    return '2 / 3 / 3 / 4';
+                                case 'thursday':
+                                    return '2 / 4 / 3 / 5';
+                                case 'friday':
+                                    return '2 / 5 / 3 / 6';
+                                case 'saturday':
+                                    return '2 / 6 / 3 / 7';
+                                case 'sunday':
+                                    return '2 / 7 / 3 / 8';
+                            }
                         }
                     }
-                }
-                this.removeDuplicates(recipe)
-                this.clearForm()
-                this.showRecipeSavedMsg = true
+                    this.removeDuplicates(recipe)
+                    this.clearForm()
+                    this.showRecipeSavedMsg = true
 
-                this.$emit('save-recipe', recipe)
-            },
-            removeDuplicates(recipe) {
-                for (let i = 0; i < this.recipes.length; i++) {
-                    if (this.recipes[i].weekday === recipe.weekday) {
-                        this.recipes[i].weekday = ''
+                    this.$emit('save-recipe', recipe)
+                },
+                removeDuplicates(recipe) {
+                    for (let i = 0; i < this.recipes.length; i++) {
+                        if (this.recipes[i] !== recipe) {
+                        if (this.recipes[i].weekday === recipe.weekday) {
+                            this.recipes[i].weekday = ''
+                        }
                     }
                 }
             },
@@ -263,15 +265,16 @@
                 this.showShoppingListBtn = false
             }
         },
-        mounted() {
-            eventBus.$on('hide-others', () => {
-                this.showForm = false
-                this.showRecipeSavedMsg = false
-                this.showTodaysRecipe = false
-                this.showRecipeBtn = true
-                this.showShoppingListBtn = true
-            })
-        }
+        mounted()
+    {
+        eventBus.$on('hide-others', () => {
+            this.showForm = false
+            this.showRecipeSavedMsg = false
+            this.showTodaysRecipe = false
+            this.showRecipeBtn = true
+            this.showShoppingListBtn = true
+        })
+    }
     })
 
     Vue.component('todays-recipe', {
@@ -315,9 +318,17 @@
             recipes: {
                 type: Array,
                 required: true
+            },
+            weekdays: {
+                type: Array,
+                required: true
+            },
+            removeDuplicates: {
+                type: Function,
+                required: true
             }
         },
-        //todo lägg till möjlighet att klicka i vecka
+        //todo bug - samma namn öppnar båda. Förhindra duplicates eller gå på annat värde. Visa "no recipes"-text
         template: `
           <section id="recipe-list" v-show="showRecipes">
           <button @click="hideRecipes">Hide recipes</button>
@@ -338,6 +349,16 @@
                        @click="deleteRecipe">
               </div>
               <div v-show="selectedTitle === recipe.title">
+                <h4 v-if="recipe.weekday">Recipe for: {{ recipe.weekday }}</h4>
+                <div v-else>
+                  <h4>Assign to weekday:</h4>
+                  <select id="newWeekday" name="newWeekday" v-model="newWeekday">
+                    <option v-for="(weekday, index) in weekdays"
+                            :key="index">{{ weekday }}
+                    </option>
+                  </select>
+                  <button @click="assignWeekday">Assign</button>
+                </div>
                 <ul>
                   <li
                       v-for="(ingredient, index) in recipe.ingredients"
@@ -353,7 +374,8 @@
         data() {
             return {
                 showRecipes: false,
-                selectedTitle: ''
+                selectedTitle: '',
+                newWeekday: ''
             }
         },
         methods: {
@@ -367,6 +389,12 @@
                     let pos = this.recipes.indexOf(this.selectedTitle)
                     this.recipes.splice(pos, 1)
                 }
+            },
+            assignWeekday() {
+                let recipe = this.recipes.find(x => x.title === this.selectedTitle)
+                recipe.weekday = this.newWeekday
+                recipe.image = `img/${this.newWeekday}.jpg`
+                this.removeDuplicates(recipe)
             }
         },
         mounted() {
